--- a/DOM RELATED/add_domElement.html
+++ b/DOM RELATED/add_domElement.html
@@ -9,6 +9,19 @@
     
 </body>
     <script>
-        document.Cre
+        const div = document.createElement('div')
+        console.log(div);
+        div.className = 'main'
+        div.id = Math.round(Math.random * 10 + 1)
+        div.setAttribute('title','generated title')
+        div.style.backgroundColor = "orange"
+        div.style.padding = "10px";
+        // div.innerText = "Dom || Adding element"
+        // We use the below method genrally 
+        const new_text = document.createTextNode("Dom || Adding element")
+        div.appendChild(new_text)
+
+        // Adding div to the body og document visible
+        document.body.appendChild(div)
     </script>
 </html>
